2007-05-19 Sarka Todorova <sarka.todorova@cern.ch>
	* fix a problem in geometry builder 
        * tagged as MuonTrackingGeometry-00-00-44

2007-05-14 Sarka Todorova <sarka.todorova@cern.ch>
	* fix problem in finalization 
        * tagged as MuonTrackingGeometry-00-00-43

2007-05-07 Sarka Todorova <sarka.todorova@cern.ch>
        * memory leaks - major clean-up (thanks to Scott Snyder)
	* use of GeoVolumeCursor extended to MuonInertMaterialBuilder
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-42

2007-04-12 Sarka Todorova <sarka.todorova@cern.ch>
        * further improvement in initialization time (change iteration over GeoModel tree and remove RpcIdHelper::valid())
	* fixed identification of assembled stations (BOG,..)
	* name of inert volume envelope changed to differ from volume itself 
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-41

2007-04-11 Sarka Todorova <sarka.todorova@cern.ch>
        * faster initialization (identify prototypes and recalculate) 
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-40

2007-04-10 Sarka Todorova <sarka.todorova@cern.ch>
        * fix crashes in dbg (from MuonIdHelpers when identifing MTG active surfaces)
	* known problems, to be fixed : unidentified RPC layers in BMS stations
	* slow initialization (mainly MDT identification) 
        * tagged as MuonTrackingGeometry-00-00-39

2007-03-22 Andi Salzburger <Anreas.Salzburger@cern.ch>
        * remove redundant files
        * tagged as MuonTrackingGeometry-00-00-38

2007-03-20 Andi Salzburger <Anreas.Salzburger@cern.ch>
        * first configurable version
        * tagged as MuonTrackingGeometry-00-00-37

2007-03-14 Sarka Todorova <sarka.todorova@cern.ch>
	* temporary(?) fix of retrieval of BOG stations with cutouts (MGM tree id link broken)
	* tagged MuonTrackingGeometry-00-00-36
